# utils

./: .gitignore  CMakeLists.txt
include/: ArrayView.h
tests/: ArrayView.cpp  CMakeLists.txt
